After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720099 - codecparsers: h264: fix picture level scaling lists derivation from fall-back rule set B
codecparsers: h264: fix picture level scaling lists derivation from fall-back...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.2.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 706406
 
 
Reported: 2013-12-09 10:48 UTC by Gwenole Beauchesne
Modified: 2013-12-13 00:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
codecparsers: h264: fix picture level scaling lists derivation (1.57 KB, patch)
2013-12-09 10:55 UTC, Gwenole Beauchesne
committed Details | Review

Description Gwenole Beauchesne 2013-12-09 10:48:53 UTC
Hi, the following patch from Cong Zhong addresses the issue whereby incorrect scaling lists where provided to gst_h264_parser_parse_scaling_list() when we needed to apply the scaling list fall-back rule set B as specified for picture level scaling lists (7.4.2.2). i.e. intra and inter scaling lists were swapped.

This fixes FRExt/freh5.264 and most likely http://samples.mplayerhq.hu/Matroska/H264+EAC3.mkv
Comment 1 Gwenole Beauchesne 2013-12-09 10:55:09 UTC
Created attachment 263808 [details] [review]
codecparsers: h264: fix picture level scaling lists derivation

I will push the following patch once we complete full regression testing. I am also considering backports to 1.0 and 1.2 branches.
Comment 2 Gwenole Beauchesne 2013-12-10 09:38:11 UTC
No regression observed on 4 platforms. Pushed to git master branch only at this time.

I don't mind for gstreamer-vaapi, since I use built-in codecparsers from git master, but others would probably be interested in those changes for earlier versions too. If we are OK to backport this patch, then I'd also expect those from bug #708629 to get in as well for consistency, but that's not mandatory, they fix different bugs. :)
Comment 3 Gwenole Beauchesne 2013-12-10 09:38:49 UTC
commit 631d5d94ed404afa04c5e62dc105d4798166e09f
Author: Cong Zhong <congx.zhong@intel.com>
Date:   Wed Apr 17 10:44:48 2013 +0800

    codecparsers: h264: fix picture level scaling lists derivation (rule B).
    
    Fix picture level scaling lists derivation from fall-back rule set B,
    as specified in 7.4.2.2. More precisely, the sequence level scaling
    lists need to be used but intra and inter lists arguments were swapped.
    
    This fixes FRExt/freh5.264 from conformance testing.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=720099
    
    Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Comment 4 Tim-Philipp Müller 2013-12-13 00:14:20 UTC
Picked into 1.2. (The other one involves new API, so skipping that for now)